third_party/move/move-compiler-v2/tests/lambda/inline-parity/inlining1.exp

Diagnostics:
error: Only inline functions may have function-typed parameters, but non-inline function `Test::foo` has a function parameter:
  ┌─ tests/lambda/inline-parity/inlining1.move:3:9
  │
3 │     fun foo(f:|u64| u64, x: u64): u64 {
  │         ^^^ - Parameter `f` has function-valued type `|u64|u64`.
